Unable to record streams with special chars in name
For me the record module is most usefull when wathing live stuff u can control. such as radio streams or various webcast. The problem is many of the shoutcast streams (which is wher ei asume most ppl get their favorite radio station from) has all sort of fancy characters in their name. An exmaple could be: (#2 (closed) - 29/300) .....:::::) beatbasement.com (:::::..... Powered by Fast-Serv.com
When i hit my hotkey to record, it fails with the following message:
access_filter_record debug: dump in file 'D:/.....:::::) beatbasement.com (:::::..... Powered by Fast-Serv.com 7-11-2005 22h21m57s.dat' access_filter_record error: cannot open file 'D:/.....:::::) beatbasement.com (:::::..... Powered by Fast-Serv.com 7-11-2005 22h21m57s.dat' (Invalid argument)
Because it contains multiple characters that are ilegal in windows filenames. So this means, as far as I can see, that streams with ilegal character (which is a very big percentage of shoutcast streams) cant be recorded by the recording module? I cant find any options to set a user controlled filename.
A simple fix would be to simply fallback to a default filename if ilegal chars are in name. So if the example above was used, vlc would see the ilegal chars, and use a name such as vlc-recording1011051431, basically a default name and an appended timestamp. An even nicer solution woudl be to let user chose a recording filename int he options, so it doesnt necesarily use the streams name.
Either solution is obviously a big improvement fromt he current situation since, atm u cant record a lot of radio streams.
Btw this behavior is with newest 0.8.5 trunk build under cygwin in windows. But im pretty confident it will be a problem on all platforms that dont allow ALL characters to be used in filenames.