Replace forbidden characters with underscores when attempting to dump a stream (closes #423)